# ssc-cdi

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .zenodo.json  CHANGES.rst  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  VERSION  __init__.py  pyproject.toml  setup.py
.github/workflows/: zenodo.yml
cuda/inc/: propagator.hpp  ptycho.hpp
cuda/inc/common/: logger.hpp  logger_none.hpp  logger_sentry.hpp  operations.hpp  types.hpp  utils.hpp
cuda/inc/common10/: drvapi_error_string.h  exception.h  helper_cuda.h  helper_cuda_drvapi.h  helper_functions.h  helper_image.h  helper_timer.h  nvrtc_helper.h
cuda/inc/planewave/: compute.h  er.h  fft.h  gpus.h  hio.h  pwcdi.h  pwutils.h
cuda/inc/ptycho/: engines_common.hpp  propagator.hpp  ptycho.hpp
cuda/src/: glim.cu  main.cu  pie.cu  poscorrection.cu  propagator.cu  ptycho.cu  raar.cu
cuda/src/common/: logger.cpp  operations.cu
cuda/src/planewave/: compute.cu  er.cu  fft.cu  gpus.cu  hio.cu  pwcdi.cu  pwutils.cu  util.cu
cuda/src/ptycho/: ap.cu  engines_common.cu  glim.cu  main.cu  pie.cu  poscorrection.cu  propagator.cu  ptycho.cu  ptychography.cu  raar.cu  radon.cu
cuda/sscPtycho/: sscPtycho-1.0.2-py3-none-any.whl  sscPtycho-1.0.2-py39-none-any.whl
cuda/sscPtycho/sscPtycho_egg/: setup.py
data/dev/ptycho/: generate_ptycho_dataset_v0.ipynb  generate_ptycho_dataset_v1.ipynb  generate_ptycho_dataset_v2.ipynb  positions.npy  probe.npy
data/dev/pwcdi/: modulator.npy.REMOVED.git-id
data/processing/: autocenter_difpad.REMOVED.git-id
data/processing/alignment/: create_alignment_phantom.ipynb  regular_angles_donut.npy.REMOVED.git-id
data/ptycho/: object.npy  positions.npy  processed_obj.npy
data/tomo/: data.npy  data.npy.REMOVED.git-id
docs/: Makefile  README.md  conf.py  doxyconf  requirements.txt
docs/source/: about.rst  api.rst  changelog.rst  conf.py  examples.rst  index.rst  install.rst  private.rst  public.rst  tutorial.rst  usage.rst
docs/source/api/: ptycho.rst
docs/source/dev/: developer.rst
docs/source/xml/: classASM.xml  classFraunhoffer.xml  classPropagator.xml  dir_7bad8fb98241d550a9a3ae4d977e523a.xml  dir_7f72761faf76ad5b97d7f36c114afa29.xml  dir_ea391df6eff8c05a1d61fc70822e6d3c.xml  glim_8cu.xml  index.xml  main_8cu.xml  pie_8cu.xml  poscorrection_8cu.xml  propagator_8cu.xml  propagator_8hpp.xml  ptycho_8cu.xml  ptycho_8hpp.xml  raar_8cu.xml  radon_8cu.xml  structGLim.xml  structInitializer.xml  structPOptAlgorithm.xml  structPie.xml  structPosCorrection.xml  structRAAR.xml  structROI.xml
examples/: CAT_inputs.json  CAT_ptycho_inputs.ipynb  CAT_ptycho_inputs.json  CAT_ptycho_pipeline.ipynb  CAT_tomo_inputs.json  CAT_tomo_inputs2.json  CAT_tomo_pipeline.ipynb  CAT_update_packages.ipynb  CNB_inputs.json  CNB_inputs_OLD.json  CNB_ptycho_inputs.json  example_new_jason_file.json  example_old_jason_file.json  output.h5  planewave_example.ipynb  ptycho_example.ipynb  ptycho_example_new.ipynb  tomo_pipeline-logo-phase.ipynb  tomo_pipeline-sphere-phase.ipynb  tomo_pipeline.ipynb  tomography_example_gcc.ipynb
examples/planewave/: mario256_diff3d.npy.REMOVED.git-id  mario256_phantom.npy.REMOVED.git-id  planewave_example_mario.ipynb
examples/ptycho/: ptycho_example.ipynb
examples/tomography/: phase_contrast_tomo_preprocessing.ipynb
sscCdi/: __init__.py  _telem.py  _version.py  cditypes.py  cditypes_planewave.py  jupyter.py  misc.py
sscCdi/beamlines/: __init__.py  gui_jupyter.py
sscCdi/beamlines/carnauba/: cnb_ptycho_processing.py  cnb_restoration.py
sscCdi/beamlines/caterete/: cat_ptycho_processing.py  cat_ptypy.py  cat_restoration.py  cat_tomo_processing.py
sscCdi/beamlines/ema/: ema_ptycho_processing.py
sscCdi/beamlines/gui/: cat_jupyter_ptycho.py  cat_jupyter_tomo.py  cnb_jupyter_ptycho.py
sscCdi/beamlines/mogno/: mogno_nearfiled_ptycho_pipeline.ipynb  mogno_ptycho_processing.py  nearfiled_ptycho_pipeline.ipynb
sscCdi/carnauba/: __init__.py  cnb_processing.py  cnb_ptycho_processing.py  cnb_restoration.py  jupyter_ptycho.py  linearity_correction.py  ptycho_jupyter.py  restauration.py  triggers.py
sscCdi/caterete/: Untitled.ipynb  __init__.py  cat_ptycho_processing.py  cat_ptypy.py  cat_restoration.py  cat_tomo_processing.py  fresnel.py  functions.py  git_install.py  jupyter.py  jupyterTomography.py  jupyter_cat_ptycho.py  jupyter_general.py  jupyter_ptycho.py  jupyter_recon2D.py  jupyter_recon3D.py  jupyter_restoration.py  jupyter_tomo.py  misc.py  padfilter.ipynb  pipinstall.bash  planewave_restauration.py  ptycho_gcc_jupyter.py  ptycho_jupyter.py  ptycho_processing.py  ptycho_restauration.py  ptycho_restoration.py  restauration.py  restoration_jupyter.py  tomo_jupyter.py  tomo_processing.py  unwrap.py  unwrap_jupyter.py
sscCdi/caterete/PTYCHO/: RAAR_mPIE.ipynb  RAAR_mPIE.py  RAAR_mPIE_spyder.py  Untitled.ipynb  create_phantom.py  create_ptycho_phantom.ipynb  dev_position_correction.ipynb  phase_unwrap_LS.ipynb  phase_unwrap_LS.py  phase_unwrap_WLS.ipynb  plane_filter_pad.py  ptycho_functions.py  recon2D_ptycho_v2.1.1.ipynb  recon3D_tomo_v1.1.1.ipynb
sscCdi/caterete/PWCDI/: PWCDI.py  PWCDI_classical.ipynb  PWCDI_slit.ipynb  PWCDI_slit2.ipynb  PWCDI_slit3.ipynb  Untitled.ipynb  Untitled1.ipynb  complex_donuts_intensity.npy  unwrap.ipynb
sscCdi/ema/: __init__.py  ema_ptycho_processing.py
sscCdi/gui/: cat_jupyter_ptycho.py  cat_jupyter_tomo.py  cnb_jupyter_ptycho.py
sscCdi/mogno/: mogno_ptycho_processing.py  nearfiled_ptycho_pipeline.ipynb
sscCdi/planewave/: __init__.py  planewave.py
sscCdi/processing/: __init__.py  alignment.py  propagation.py  ptycho_fresnel.py  restoration.py  tomo_processing.py  unwrap.py
sscCdi/ptycho/: ML.py  __init__.py  common.py  dev_wasp.py  engines_common.py  pie.py  plots.py  position_correction.py  position_correction_python.py  ptycho_plots.py  ptychography.py  raar.py
sscCdi/tomo/: __init__.py  tomo_processing.py
tests/: autotest_ptycho_engines.py  diff_patterns.npy  diff_patterns.npy.REMOVED.git-id  generate_data_ptycho.py  object.h5  object.npy  positions.npy  probe.h5  probe.npy  test_ptycho_engines.py
(+248 files in other folders)
